--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div id="menu">
         <div class="menu-info">
           <div class="menu-desc1">
-            <h1 class="monoton-regular">Our Menu</h1>
+            <h1 class="monoton-regular">OUR MENU</h1>
             <h3>Delicious beverages. Unforgettable desserts.</h3>
           </div>
       
@@ -250,8 +250,8 @@
         <div>
             <div>
                 <h1>Hours</h1>
-                <p>Sun-Wed: 8AM-PM</p>
-                <p>Thurs-Sat: 8AM-8PM</p>
+                <p>Sun-Wed: <strong>8</strong>AM-<strong>5</strong>PM</p>
+                <p>Thurs-Sat: <strong>8</strong>AM-<strong>8</strong>PM</p>
             </div>
             <div>
                 <h1>Location</h1>
